# facebook-marketplace-rss

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.json.example  config.py  database.py  design.md  docker-compose.yml  dummy_config.json  fb_ad_monitor.py  pytest.ini  rate_limiter.py  requirements.md  requirements.txt  spec.md
.github/workflows/: codeql-analysis.yml  docker-publish.yml
docs/: design.md  spec.md
migrations/: V1__initial.sql
src/: config.rs  db.rs  filter.rs  main.rs  rss_gen.rs  scraper.rs  web.rs
static/css/: style.css
static/js/: edit_config.js
templates/: edit_config.html
tests/: test_ad_monitor.py  test_config.py  test_database.py  test_property_based.py  test_rate_limiting.py  test_selenium_container.py
