[package]
name = "facebook-marketplace-rss"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
thirtyfour = "0.33"
rss = "2.0"
scraper = "0.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
iana-time-zone = "0.1"
mockall = "0.12"
md5 = "0.7"
rand = "0.9"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
tracing-appender = "0.2"

[dev-dependencies]
tempfile = "3.10"
